Fix canvas highlighting, intro card animations and spacing

--- a/components/home/CallToActionCard.module.css
+++ b/components/home/CallToActionCard.module.css
@@ -5,7 +5,7 @@
 
 .container {
    position: relative;
-   height: 90vh;
+   height: 80vh;
    margin-top: 10vh;
    padding-left: 10vw;
    padding-right: 10vw;
@@ -46,6 +46,6 @@
   bottom: 0;
   left: 0;
   width: 100%;
-  height: 50%;
+  height: 40%;
   z-index: 2;
 }
