--- a/components/home/IntroductionCard.module.css
+++ b/components/home/IntroductionCard.module.css
@@ -1,6 +1,6 @@
 .container {
    padding-top: 10vh;
-   height: 280vh;
+   height: auto;
    padding-left: 10vw;
    padding-right: 10vw;
    background: #F0F5E0; 
